--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&family=Oswald&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -75,8 +76,48 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 400;
 }
 
+@font-face {
+  font-family: "Mont";
+  src: local("Mont Extra Light"), local("Mont-Extra-Light"), url("../fonts/Mont-ExtraLight.woff2") format("woff2"), url("../fonts/Mont-ExtraLight.woff") format("woff"), url("../fonts/Mont-ExtraLight.ttf") format("truetype");
+  font-weight: 200;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Mont";
+  src: local("Mont Heavy"), local("Mont-Heavy"), url("../fonts/Mont-Heavy.woff2") format("woff2"), url("../fonts/Mont-Heavy.woff") format("woff"), url("../fonts/Mont-Heavy.ttf") format("truetype");
+  font-weight: 900;
+  font-style: normal;
+}
+
+.section {
+  width: 100%;
+}
+
 .container {
-  max-width: 2000px;
+  max-width: 1360px;
   width: 100%;
   margin: 0 auto;
+  padding: 0 30px;
+}
+
+.footer {
+  background-color: #3f3154;
+}
+
+.footer_inner {
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  color: #f5f5f6;
+  text-align: center;
+  padding: 15px 0;
+}
+
+.footer_inner__text {
+  margin-bottom: 6px;
+}
+
+.footer_inner__text:last-child {
+  margin-bottom: 0;
 }
