--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,14 +2,72 @@
 
 // === Fonts ===
 
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&family=Oswald&display=swap");
+
+@mixin font-montserrat {
+	font-family: "Montserrat", sans-serif;
+}
+
+@mixin font-oswald {
+	font-family: "Oswald", sans-serif;
+}
+
+@font-face {
+	font-family: "Mont";
+	src: local("Mont Extra Light"), local("Mont-Extra-Light"), url("../fonts/Mont-ExtraLight.woff2") format("woff2"),
+		url("../fonts/Mont-ExtraLight.woff") format("woff"), url("../fonts/Mont-ExtraLight.ttf") format("truetype");
+	font-weight: 200;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "Mont";
+	src: local("Mont Heavy"), local("Mont-Heavy"), url("../fonts/Mont-Heavy.woff2") format("woff2"),
+		url("../fonts/Mont-Heavy.woff") format("woff"), url("../fonts/Mont-Heavy.ttf") format("truetype");
+	font-weight: 900;
+	font-style: normal;
+}
+
 // === /Fonts ===
 
 // === Common ===
 
+.section {
+	width: 100%;
+}
+
 .container {
-	max-width: 2000px;
+	max-width: 1360px;
 	width: 100%;
 	margin: 0 auto;
+	padding: 0 30px;
 }
 
 // === /Common ===
+
+// === Footer ===
+
+.footer {
+	background-color: #3f3154;
+
+	&_inner {
+		@include font-montserrat;
+		font-size: 14px;
+		font-weight: 300;
+		color: #f5f5f6;
+
+		text-align: center;
+
+		padding: 15px 0;
+
+		&__text {
+			margin-bottom: 6px;
+		}
+
+		&__text:last-child {
+			margin-bottom: 0;
+		}
+	}
+}
+
+// === /Footer ===
