--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ h1, h2, h3, h4, h5, h6 {
 
 @font-face {
   font-family: "Mont";
-  src: local("Mont Extra Light"), local("Mont-Extra-Light"), url("../fonts/Mont-ExtraLight.woff2") format("woff2"), url("../fonts/Mont-ExtraLight.woff") format("woff"), url("../fonts/Mont-ExtraLight.ttf") format("truetype");
+  src: local("Mont Extra Light"), local("Mont-Extra-Light"), url("../fonts/Mont-ExtraLight.ttf") format("truetype");
   font-weight: 200;
   font-style: normal;
 }
@@ -88,6 +88,12 @@ h1, h2, h3, h4, h5, h6 {
   src: local("Mont Heavy"), local("Mont-Heavy"), url("../fonts/Mont-Heavy.woff2") format("woff2"), url("../fonts/Mont-Heavy.woff") format("woff"), url("../fonts/Mont-Heavy.ttf") format("truetype");
   font-weight: 900;
   font-style: normal;
+}
+
+body {
+  font-family: "Montserrat", sans-serif;
+  font-size: 20px;
+  font-weight: 300;
 }
 
 .section {
@@ -101,11 +107,80 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0 22px;
 }
 
+.header__inner {
+  height: 480px;
+}
+
+.header__top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 100%;
+}
+
+.header .header__item {
+  width: 33.333%;
+}
+
+.header__logo {
+  padding: 50px 10px;
+}
+
+.header__logo img {
+  max-width: 136px;
+}
+
+.header__title {
+  font-family: "Mont";
+  font-weight: 200;
+  color: #f5f5f6;
+  text-align: center;
+  text-transform: uppercase;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0 46px;
+  height: 100%;
+  background-color: #3f3154;
+  border-bottom-left-radius: 130px;
+  border-bottom-right-radius: 130px;
+}
+
+.header__title--top {
+  font-size: 91px;
+}
+
+.header__title--bottom {
+  font-size: 36px;
+  letter-spacing: 0.5em;
+  margin-right: -0.6em;
+}
+
+.header__link {
+  font-family: "Montserrat", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  letter-spacing: 2px;
+  color: #3f3154;
+  text-align: right;
+  padding: 85px 10px;
+}
+
 .footer {
   background-color: #3f3154;
 }
 
-.footer_inner {
+.footer__inner {
   font-family: "Montserrat", sans-serif;
   font-size: 14px;
   font-weight: 300;
@@ -114,10 +189,10 @@ h1, h2, h3, h4, h5, h6 {
   padding: 15px 0;
 }
 
-.footer_inner__text {
+.footer__inner__text {
   margin-bottom: 6px;
 }
 
-.footer_inner__text:last-child {
+.footer__inner__text:last-child {
   margin-bottom: 0;
 }
