--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,8 +14,7 @@
 
 @font-face {
 	font-family: "Mont";
-	src: local("Mont Extra Light"), local("Mont-Extra-Light"), url("../fonts/Mont-ExtraLight.woff2") format("woff2"),
-		url("../fonts/Mont-ExtraLight.woff") format("woff"), url("../fonts/Mont-ExtraLight.ttf") format("truetype");
+	src: local("Mont Extra Light"), local("Mont-Extra-Light"), url("../fonts/Mont-ExtraLight.ttf") format("truetype");
 	font-weight: 200;
 	font-style: normal;
 }
@@ -32,6 +31,12 @@
 
 // === Common ===
 
+body {
+	@include font-montserrat;
+	font-size: 20px;
+	font-weight: 300;
+}
+
 .section {
 	width: 100%;
 }
@@ -45,12 +50,81 @@
 
 // === /Common ===
 
+// === Header ===
+
+.header {
+	&__inner {
+		height: 480px;
+	}
+
+	&__top {
+		display: flex;
+		justify-content: space-between;
+		height: 100%;
+	}
+
+	.header__item {
+		width: 33.333%;
+	}
+
+	&__logo {
+		padding: 50px 10px;
+	}
+
+	&__logo img {
+		max-width: 136px;
+	}
+
+	&__title {
+		font-family: "Mont";
+		font-weight: 200;
+		color: #f5f5f6;
+		text-align: center;
+		text-transform: uppercase;
+
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+
+		padding: 0 46px;
+		height: 100%;
+
+		background-color: #3f3154;
+		border-bottom-left-radius: 130px;
+		border-bottom-right-radius: 130px;
+	}
+
+	&__title--top {
+		font-size: 91px;
+	}
+
+	&__title--bottom {
+		font-size: 36px;
+
+		letter-spacing: 0.5em;
+		margin-right: -0.6em;
+	}
+
+	&__link {
+		@include font-montserrat;
+		font-size: 20px;
+		font-weight: 400;
+		letter-spacing: 2px;
+		color: #3f3154;
+		text-align: right;
+
+		padding: 85px 10px;
+	}
+}
+
+// === /Header ===
+
 // === Footer ===
 
 .footer {
 	background-color: #3f3154;
 
-	&_inner {
+	&__inner {
 		@include font-montserrat;
 		font-size: 14px;
 		font-weight: 300;
